Using jQuery in jQuery.noConflict() mode.
This should minimize potential interference from unrelated JS libraries.

--- a/book/src/main/resources-filtered/META-INF/resources/theme-documentation/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/theme-documentation/changelog.jspx
@@ -37,7 +37,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2016-10-31T02:51:43-0500"
-		dateModified="2019-06-12T22:12:17-0500"
+		dateModified="2019-06-12T23:01:53-0500"
 	>
 		<!-- The current snapshot, unreleased version -->
 		<c:set var="version" value="@{com.semanticcms:semanticcms-theme-documentation:pom.version}" />
@@ -62,7 +62,10 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 						</ol>
 					</li>
 					<li>Now supporting media="print" stylesheets.</li>
-					<li>Changed "$" to "jQuery" for jQuery 3 compatibility.</li>
+					<li>
+						Using jQuery in <ao:a href="https://api.jquery.com/jquery.noconflict/">jQuery.noConflict()</ao:a> mode.
+						This should minimize potential interference from unrelated JS libraries.
+					</li>
 				</ul>
 			</changelog:release>
 		</c:if>
