--- a/book/src/main/resources-filtered/META-INF/resources/theme-documentation/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/theme-documentation/changelog.jspx
@@ -36,7 +36,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2016-10-31T02:51:43-0500"
-		dateModified="2019-06-12T23:01:53-0500"
+		dateModified="2019-06-19T09:48:11-0500"
 	>
 		<!-- The current snapshot, unreleased version -->
 		<c:set var="version" value="@{com.semanticcms:semanticcms-theme-documentation:pom.version}" />
@@ -57,7 +57,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 					<li>Minimum Java version changed from 1.6 to 1.7.</li>
 					<li>Using managed dependencies:
 						<ol>
-							<li>This project uses transitive managed dependencies.</li>
+							<li>This project uses managed dependencies.</li>
 							<li>This project's managed dependencies may also be imported by other projects.</li>
 						</ol>
 					</li>
