--- a/src/main/resources-filtered/META-INF/resources/semanticcms-theme-documentation/frameset.inc.jspx
+++ b/src/main/resources-filtered/META-INF/resources/semanticcms-theme-documentation/frameset.inc.jspx
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 semanticcms-theme-documentation - SemanticCMS theme tailored for technical documentation.
-Copyright (C) 2013, 2014, 2015, 2016  AO Industries, Inc.
+Copyright (C) 2013, 2014, 2015, 2016, 2019  AO Industries, Inc.
 	support@aoindustries.com
 	7262 Bull Pen Cir
 	Mobile, AL 36695
@@ -62,7 +62,7 @@ Arguments:
 			<frame id="navigationFrame" name="navigationFrame" src="${fn:escapeXml(ao:encodeURL(navigationSrc))}" />
 			<c:set var="contentSrc" value="${pageContext.request.contextPath}${pageRef}" />
 			<c:if test="${!empty param.view}">
-				<c:set var="contentSrc" value="${contentSrc}?view=${core:encodeUrlParam(param.view)}" />
+				<c:set var="contentSrc" value="${contentSrc}?view=${ao:encodeQuery(param.view)}" />
 			</c:if>
 			<frame id="contentFrame" name="contentFrame" src="${fn:escapeXml(ao:encodeURL(contentSrc))}" />
 		</frameset>
