--- a/src/main/resources-filtered/META-INF/resources/semanticcms-theme-documentation/error.jspx
+++ b/src/main/resources-filtered/META-INF/resources/semanticcms-theme-documentation/error.jspx
@@ -50,7 +50,7 @@ Arguments:
 
 		// Find the request URL in context-relative form
 		String requestUri = (String)request.getAttribute("javax.servlet.error.request_uri");
-		String contextPath = request.getContextPath();
+		String contextPath = com.aoindustries.net.URIEncoder.encodeURI(request.getContextPath());
 		int cpLen = contextPath.length();
 		String pagePath;
 		if(cpLen > 0) {
