--- a/src/main/resources-filtered/META-INF/resources/semanticcms-theme-documentation/page-top-area.inc.jspx
+++ b/src/main/resources-filtered/META-INF/resources/semanticcms-theme-documentation/page-top-area.inc.jspx
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 semanticcms-theme-documentation - SemanticCMS theme tailored for technical documentation.
-Copyright (C) 2013, 2014, 2015, 2016, 2017  AO Industries, Inc.
+Copyright (C) 2013, 2014, 2015, 2016, 2017, 2019  AO Industries, Inc.
 	support@aoindustries.com
 	7262 Bull Pen Cir
 	Mobile, AL 36695
@@ -29,7 +29,7 @@ Arguments:
 	arg.book     The book of the current page
 	arg.path     The book-relative path to the current page (without any view parameter)
 	arg.view     The book-relative path to the current view (with view parameter)
-	arg.page     The option page, if this is a view of a specific page
+	arg.page     The optional page, if this is a view of a specific page
 	arg.active   The optional active link, matching view name.
 -->
 <jsp:root
