--- a/src/main/resources-filtered/META-INF/resources/semanticcms-theme-documentation/theme.jspx
+++ b/src/main/resources-filtered/META-INF/resources/semanticcms-theme-documentation/theme.jspx
@@ -51,7 +51,7 @@ Arguments:
 	</c:if>
 
 	<!-- Display the current view and page -->
-	<ao:html doctype="html5">
+	<ao:html>
 		<c:set var="view" value="${arg.view}" />
 		<c:set var="pageRef" value="${page.pageRef}" />
 		<head>
