--- a/src/main/resources-filtered/META-INF/resources/semanticcms-theme-documentation/theme.inc.jspx
+++ b/src/main/resources-filtered/META-INF/resources/semanticcms-theme-documentation/theme.inc.jspx
@@ -55,7 +55,17 @@ Arguments:
 		<c:set var="view" value="${arg.view}" />
 		<c:set var="pageRef" value="${page.pageRef}" />
 		<head>
-			<ao:meta charset="${pageContext.response.characterEncoding}" />
+			<ao:choose>
+				<ao:when test="#{ao:getDoctype() == 'HTML5'}">
+					<ao:meta charset="${pageContext.response.characterEncoding}" />
+				</ao:when>
+				<ao:otherwise>
+					<ao:meta httpEquiv="Content-Type" content="${pageContext.response.contentType}" />
+					<ao:meta httpEquiv="Content-Style-Type" content="text/css" />
+					<ao:meta httpEquiv="Content-Script-Type" content="text/javascript" />
+				</ao:otherwise>
+			</ao:choose>
+			<!-- TODO: Review HTML 4/HTML 5 differences from here -->
 			<core:doComponents view="${view}" page="${page}" position="HEAD_START" />
 			<ao:meta httpEquiv="X-UA-Compatible" content="IE=edge" />
 			<!-- Mobile support -->
