--- a/src/main/resources-filtered/META-INF/resources/semanticcms-theme-documentation/error.jspx
+++ b/src/main/resources-filtered/META-INF/resources/semanticcms-theme-documentation/error.jspx
@@ -94,7 +94,17 @@ Arguments:
 			</c:catch>
 		</c:if>
 		<head>
-			<ao:meta charset="${pageContext.response.characterEncoding}" />
+			<ao:choose>
+				<ao:when test="#{ao:getDoctype() == 'HTML5'}">
+					<ao:meta charset="${pageContext.response.characterEncoding}" />
+				</ao:when>
+				<ao:otherwise>
+					<ao:meta httpEquiv="Content-Type" content="${pageContext.response.contentType}" />
+					<ao:meta httpEquiv="Content-Style-Type" content="text/css" />
+					<ao:meta httpEquiv="Content-Script-Type" content="text/javascript" />
+				</ao:otherwise>
+			</ao:choose>
+			<!-- TODO: Review HTML 4/HTML 5 differences from here -->
 			<core:doComponents view="${null}" page="${null}" position="HEAD_START" />
 			<ao:meta httpEquiv="X-UA-Compatible" content="IE=edge" />
 			<!-- Mobile support -->
