--- a/src/main/resources-filtered/META-INF/resources/semanticcms-theme-documentation/frameset.jspx
+++ b/src/main/resources-filtered/META-INF/resources/semanticcms-theme-documentation/frameset.jspx
@@ -41,9 +41,17 @@ Arguments:
 	<c:set var="book" value="${applicationScope.semanticCMS.rootBook}" />
 	<ao:html doctype="FRAMESET"><!-- HTML5 does not support framesets -->
 		<head>
-			<ao:meta httpEquiv="Content-Style-Type" content="text/css" />
-			<ao:meta httpEquiv="Content-Script-Type" content="text/javascript" />
-			<ao:meta httpEquiv="Content-Type" content="text/html;charset=${pageContext.response.characterEncoding}" />
+			<ao:choose>
+				<ao:when test="#{ao:getDoctype() == 'HTML5'}">
+					<ao:meta charset="${pageContext.response.characterEncoding}" />
+				</ao:when>
+				<ao:otherwise>
+					<ao:meta httpEquiv="Content-Type" content="${pageContext.response.contentType}" />
+					<ao:meta httpEquiv="Content-Style-Type" content="text/css" />
+					<ao:meta httpEquiv="Content-Script-Type" content="text/javascript" />
+				</ao:otherwise>
+			</ao:choose>
+			<!-- TODO: Review HTML 4/HTML 5 differences from here -->
 			<ao:meta httpEquiv="X-UA-Compatible" content="IE=edge" />
 			<!-- Mobile support -->
 			<ao:meta name="viewport" content="width=device-width, initial-scale=1.0" />
