--- a/src/main/resources-filtered/META-INF/resources/semanticcms-theme-documentation/theme.inc.jspx
+++ b/src/main/resources-filtered/META-INF/resources/semanticcms-theme-documentation/theme.inc.jspx
@@ -37,7 +37,8 @@ Arguments:
 	xmlns:jsp="http://java.sun.com/JSP/Page"
 	version="2.1"
 >
-	<jsp:directive.page language="java" pageEncoding="UTF-8" session="false" />
+	<jsp:directive.page language="java" pageEncoding="UTF-8" />
+	<jsp:directive.page session="false" />
 	<c:set var="page" value="${arg.page}" />
 
 	<!-- Dispatch to frameset -->
