--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/jslib/yui-2.9.0/head.inc.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/jslib/yui-2.9.0/head.inc.jspx
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 semanticcms-theme-documentation - SemanticCMS theme tailored for technical documentation.
-Copyright (C) 2013, 2014, 2016  AO Industries, Inc.
+Copyright (C) 2013, 2014, 2016, 2020  AO Industries, Inc.
 	support@aoindustries.com
 	7262 Bull Pen Cir
 	Mobile, AL 36695
@@ -33,7 +33,8 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 	xmlns:jsp="http://java.sun.com/JSP/Page"
 	version="2.1"
 >
-	<jsp:directive.page language="java" pageEncoding="UTF-8" session="false" />
+	<jsp:directive.page language="java" pageEncoding="UTF-8" />
+	<jsp:directive.page session="false" />
 	<ao:link type="text/css" rel="stylesheet" href="build/treeview/assets/skins/sam/treeview.css" />
 	<!--<ao:link type="text/css" rel="stylesheet" href="build/calendar/assets/skins/sam/calendar.css" />-->
 	<ao:link type="text/css" rel="stylesheet" href="examples/treeview/assets/css/folders/tree.css" />
