--- a/src/main/resources-filtered/META-INF/resources/semanticcms-theme-documentation/frameset.jspx
+++ b/src/main/resources-filtered/META-INF/resources/semanticcms-theme-documentation/frameset.jspx
@@ -36,7 +36,8 @@ Arguments:
 	xmlns:jsp="http://java.sun.com/JSP/Page"
 	version="2.1"
 >
-	<jsp:directive.page language="java" pageEncoding="UTF-8" session="false" />
+	<jsp:directive.page language="java" pageEncoding="UTF-8" />
+	<jsp:directive.page session="false" />
 	<c:set var="pageRef" value="${arg.page.pageRef}" />
 	<c:set var="book" value="${applicationScope.semanticCMS.rootBook}" />
 	<ao:html doctype="FRAMESET"><!-- HTML5 does not support framesets -->
