--- a/src/main/resources-filtered/META-INF/resources/semanticcms-theme-documentation/navigation.jspx
+++ b/src/main/resources-filtered/META-INF/resources/semanticcms-theme-documentation/navigation.jspx
@@ -36,7 +36,8 @@ Arguments:
 	xmlns:jsp="http://java.sun.com/JSP/Page"
 	version="2.1"
 >
-	<jsp:directive.page language="java" pageEncoding="UTF-8" session="false" />
+	<jsp:directive.page language="java" pageEncoding="UTF-8" />
+	<jsp:directive.page session="false" />
 	<c:set var="contentRoot" value="${core:captureContentRoot('meta')}" />
 	<c:set var="pageRef" value="${contentRoot.pageRef}" />
 	<c:set var="book" value="${pageRef.book}" />
