Consolidated a base set of styles from multiple projects into one place.
These are very general concepts, like a table with a thin border.
Any project that requires any of these styles should add this as a dependency.

--- a/src/main/resources-filtered/META-INF/resources/semanticcms-theme-documentation/error.inc.jspx
+++ b/src/main/resources-filtered/META-INF/resources/semanticcms-theme-documentation/error.inc.jspx
@@ -172,8 +172,7 @@ Arguments:
 						An error has occurred in processing your request.
 					</p>
 					<c:if test="${isDev}">
-						<!-- TODO: Is thinTable a SemanticCMS class? -->
-						<table class="thinTable">
+						<table class="ao-grid">
 							<tbody>
 								<tr>
 									<th>Request URI</th>
