--- a/src/main/resources-filtered/META-INF/resources/semanticcms-theme-documentation/theme.jspx
+++ b/src/main/resources-filtered/META-INF/resources/semanticcms-theme-documentation/theme.jspx
@@ -89,8 +89,9 @@ Arguments:
 				<ao:script src="/webjars/html5shiv/${fn:split('@{org.webjars:html5shiv:jar.version}', '-')[0]}/html5shiv.min.js" />
 			<jsp:text>&lt;![endif]--&gt;</jsp:text>
 			<ao:link href="/semanticcms-core-theme-base/styles/html5.css" rel="stylesheet" type="text/css" />
-			<ao:link href="styles/page.css" rel="stylesheet" type="text/css" />
-			<ao:link href="styles/page-print.css" media="print" rel="stylesheet" type="text/css" />
+			<!-- TODO: Add via ao-style-registry, from semanticcms-theme-documentation-style project -->
+			<ao:link href="styles/semanticcms-theme-documentation.css" rel="stylesheet" type="text/css" />
+			<ao:link href="styles/semanticcms-theme-documentation-print.css" media="print" rel="stylesheet" type="text/css" />
 			<!-- Application-wide CSS -->
 			<c:forEach var="cssLink" items="${applicationScope.htmlRenderer.cssLinks}">
 				<ao:link href="${cssLink}" rel="stylesheet" type="text/css" />
