--- a/src/main/resources-filtered/META-INF/resources/semanticcms-theme-documentation/navigation.inc.jspx
+++ b/src/main/resources-filtered/META-INF/resources/semanticcms-theme-documentation/navigation.inc.jspx
@@ -63,12 +63,15 @@ Arguments:
 			<ao:include page="/semanticcms-core-theme-base/authors.inc.jspx" arg.authors="${book.authors}" />
 			<title>Navigation - <ao:out value="${book.title}" /></title>
 			<!-- TODO: Review HTML 4/HTML 5 differences from here -->
+			<!-- TODO: No more html5shiv -->
 			<jsp:text>&lt;!--[if lt IE 9]&gt;</jsp:text>
 				<!-- html5shiv version "3.7.3-1" is in a directory named "3.7.3": -->
 				<ao:script src="/webjars/html5shiv/${fn:split('@{org.webjars:html5shiv:jar.version}', '-')[0]}/html5shiv.min.js" />
 			<jsp:text>&lt;![endif]--&gt;</jsp:text>
+			<!-- TODO: RegistryEE, without global? -->
 			<ao:link href="/semanticcms-core-theme-base/styles/html5.css" rel="stylesheet" type="text/css" />
 			<ao:include page="jslib/yui-2.9.0/head.inc.jspx" />
+			<!-- TODO: RegistryEE -->
 			<ao:link href="styles/navigation.css" rel="stylesheet" type="text/css" />
 			<ao:script src="navigation.js" />
 			<ao:script src="/webjars/jquery/@{org.webjars:jquery:jar.version}/jquery.min.js" />
