--- a/src/main/resources-filtered/META-INF/resources/semanticcms-theme-documentation/frameset.jspx
+++ b/src/main/resources-filtered/META-INF/resources/semanticcms-theme-documentation/frameset.jspx
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 semanticcms-theme-documentation - SemanticCMS theme tailored for technical documentation.
-Copyright (C) 2013, 2014, 2015, 2016, 2018, 2019, 2020  AO Industries, Inc.
+Copyright (C) 2013, 2014, 2015, 2016, 2019, 2020  AO Industries, Inc.
 	support@aoindustries.com
 	7262 Bull Pen Cir
 	Mobile, AL 36695
@@ -61,6 +61,7 @@ Arguments:
 			<ao:include page="/semanticcms-core-theme-base/authors.inc.jspx" arg.authors="${book.authors}" />
 			<title><!--Frames - --><ao:out value="${book.title}" /></title>
 			<!-- TODO: Review HTML 4/HTML 5 differences from here -->
+			<!-- TODO: RegistryEE, without global -->
 			<ao:link href="styles/frameset.css" rel="stylesheet" type="text/css" />
 			<!-- No search index framesets -->
 			<ao:meta name="robots" content="noindex, nofollow" />
