--- a/src/main/resources-filtered/META-INF/resources/semanticcms-theme-documentation/theme.jspx
+++ b/src/main/resources-filtered/META-INF/resources/semanticcms-theme-documentation/theme.jspx
@@ -86,7 +86,7 @@ Arguments:
 			</c:if>
 			<!-- TODO: Review HTML 4/HTML 5 differences from here -->
 			<!-- ao-web-resources -->
-			<wr:styles groups="semanticcms-core-theme-base, semanticcms-theme-documentation" /><!-- TODO: semanticcms-theme-documentation include semanticcms-core-theme-base -->
+			<wr:styles groups="semanticcms-theme-documentation" />
 			<!-- Per-view links -->
 			<!-- TODO: Move to RegistryEE -->
 			<c:forEach var="link" items="${core:getViewLinks(view, page)}">
